--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-#empty on purpose
+# this is a test user which can be accessed as :tester
+tester:
+  name: Tester Example
+  email: tester@example.com
+  password_digest: <%= User.digest('password') %>
